--- a/Xenon/ProjectResources/PrefabSlides.resx
+++ b/Xenon/ProjectResources/PrefabSlides.resx
@@ -127,6 +127,9 @@
   <data name="lordsprayer.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\24_Full.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="viewseries" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\viewseries.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="viewservices.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\53_Full.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
