update notes for 1.9

--- a/Documentation/HotReload/1.9-Notes.md
+++ b/Documentation/HotReload/1.9-Notes.md
@@ -1,18 +1,12 @@
 # Slide Creater / Integrated Presenter 1.9
 
-## General Release Notes
-
-- 1.9 builds remain untested on-air playout (qualification comming soon)
-- Recomended to use 1.9 builds only for slide creation, run presentations with Integrated Presenter 1.8.0.11-Release
-
-
 ## Slide Creater Changes
 
 - 'Clean' button will clear the cache of previously rendered slides and force Slide Creater to draw every pixel of every slide fresh (this may be usefull if it hasn't detected a slide has changed and required re-rendering. It's pretty smart most of the time). (There's also the setting in Options>Clean Pre Render to by default do this)
 
 - Bells file now only adds the audio file as a resource. Importing from LSB will attempt to detect where bells are and apply the appropriate script automatically- you'll just need to add the bells file using 'Add Resource'.
 
-- There's a new analyzer that can be run post render to compute camera preset usage. TODO: have that automatically cross-reference the CCU-Config file and generate warnings when pilot actions refer to undefined presets.
+- Slide Creater warn/errors during compilation for malformed/invalid pilot commands, or commands that reference un-configured presets.
 
 ## Hot Reload
 
@@ -55,6 +49,9 @@ This means that if your slide had a script (or drive automation) that modified t
 In practice this means if you need to edit a slide that has already run, you'll be responsible for manually resetting the switcher state to the conditions you expect to fully test if the new slides works as expected.
 
 (*NOTE: pilot actions are the exception here, they will be updated correctly to reflect the appropriate state as if all previous slides in the presentation had been run)
+
+
+NOTE: I went through a test presentation on real hardware using hot reload mode, making changes during the presentation. Seemed to work just fine. So while I'd not nessecarily reccommend relying on Hot-Reload for Sunday Playout, it probably works.
 
 
 ## Better Mock MV
